fixed font sizes issue with event. contest meta on ie

--- a/themes/greatermedia/assets/css/ie9.css
+++ b/themes/greatermedia/assets/css/ie9.css
@@ -9,4 +9,8 @@
 .type-contest .entry2__thumbnail--end-date, .type-contest .entry2__thumbnail--contest-type {
   font-size: 1rem; }
 
+.entry2__thumbnail--event-date,
+.entry2__thumbnail--contest-type {
+  font-size: 1rem; }
+
 /*# sourceMappingURL=ie9.css.map */
